[package]
name = "indexed-db"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.13"
thiserror = "1.0"
web-sys = { version = "0.3.66", features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbDatabase",
    "IdbFactory",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
] }

[dev-dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.39"
