[package]
name = "indexed-db"
version = "0.3.3"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/indexed-db"
description = "Bindings to IndexedDB that default the transactions to aborting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ekleog/indexed-db"
keywords = ["wasm", "indexeddb", "async", "web", "webassembly"]
categories = ["asynchronous", "database", "wasn", "web-programming"]

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
pin-project-lite = "0.2.13"
thiserror = "1.0"
tracing = "*"
web-sys = { version = "0.3.66", features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
] }

[dev-dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.39"
